CSS/style.css
*{
    padding: 0;
    margin: 0;
}
.dashboard-container {
    display: grid;
    grid-template-columns: 300px 1fr;
    height: 100vh;
    border: 2px solid black;
}

.sidebar {
    border: 2px solid red;
    display: grid;
    grid-template-rows: auto auto auto;
}

.main-area {
    border: 2px solid blue;
    display: grid;
    grid-template-rows: auto 1fr;
}

.header {
    border: 2px solid green;
}

.content {
    border: 2px solid orange;
}

ul {
    list-style-type: none;

}

.brand {
    display: flex;
    align-items: center;
    gap: 10px;
    padding-left: 20px;
    height: 50px;
}

.nav-main a,
.nav-secondary a {
    text-decoration: none;
    display: flex;
    align-items: center;
    gap: 10px;
    padding: 4px 20px;
}

